# Curvessor

./: .gitignore  .gitmodules  CMakeLists.txt  Curvessor.jucer  LICENSE  README.md  README.txt  README_win.txt  curvessor.jucer
JuceLibraryCode/: AppConfig.h
Source/: CurvessorDsp.cpp  CurvessorDsp.h  CurvessorOversampling.h  GammaEnvEditor.cpp  GammaEnvEditor.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Processing.cpp
iplug/: CMakeLists.txt  Curvessor.RPP  Curvessor.cpp  Curvessor.h  Curvessor.sln  README.md  config.h
iplug/Curvessor.xcworkspace/: contents.xcworkspacedata
iplug/config/: Curvessor-ios.xcconfig  Curvessor-mac.xcconfig  Curvessor-wasm.mk  Curvessor-win.props
iplug/installer/: Curvessor.iss  changelog.txt  intro.rtf  known-issues.txt  license.rtf  readme-mac.rtf  readme-win-demo.rtf  readme-win.rtf
iplug/projects/: Curvessor-aax.vcxproj  Curvessor-aax.vcxproj.filters  Curvessor-app.vcxproj  Curvessor-app.vcxproj.filters  Curvessor-clap.vcxproj  Curvessor-clap.vcxproj.filters  Curvessor-vst2.vcxproj  Curvessor-vst2.vcxproj.filters  Curvessor-vst3.vcxproj  Curvessor-vst3.vcxproj.filters  Curvessor-wasm-dsp.mk  Curvessor-wasm-ui.mk
iplug/projects/Curvessor-iOS.xcodeproj/: project.pbxproj
iplug/projects/Curvessor-iOS.xcodeproj/xcshareddata/xcschemes/: iOS-APP with AUv3.xcscheme  iOS-AUv3.xcscheme  iOS-AUv3Framework.xcscheme  iOS-Update plists.xcscheme
iplug/projects/Curvessor-macOS.xcodeproj/: project.pbxproj
iplug/projects/Curvessor-macOS.xcodeproj/xcshareddata/xcschemes/: All macOS.xcscheme  macOS-AAX.xcscheme  macOS-APP with AUv3.xcscheme  macOS-APP.xcscheme  macOS-AUv2.xcscheme  macOS-AUv3.xcscheme  macOS-AUv3Framework.xcscheme  macOS-CLAP.xcscheme  macOS-Update plists.xcscheme  macOS-VST2.xcscheme  macOS-VST3.xcscheme
iplug/resources/: Curvessor-AAX-Info.plist  Curvessor-AU-Info.plist  Curvessor-CLAP-Info.plist  Curvessor-Pages.xml  Curvessor-VST2-Info.plist  Curvessor-VST3-Info.plist  Curvessor-iOS-AUv3-Info.plist  Curvessor-iOS-Info.plist  Curvessor-iOS-LaunchScreen.storyboard  Curvessor-iOS-MainInterface.storyboard  Curvessor-macOS-AUv3-Info.plist  Curvessor-macOS-AUv3Framework-Info.plist  Curvessor-macOS-Info.plist  Curvessor-macOS-MainMenu.xib  CurvessorAU.h  CurvessorAUv3Appex.m  IPlugAUViewController_vCurvessor.xib  main.rc  main.rc_mac_dlg
iplug/scripts/: makedist-mac.sh  makedist-wasm.sh  makedist-win.bat  makeinstaller-mac.sh  makezip-win.py  update_installer-win.py  update_version-ios.py  update_version-mac.py
legal/: Curvessor.txt  JUCE.txt  PFFFT.txt  vectorclass.txt
